--- a/package.json
+++ b/package.json
@@ -13,7 +13,17 @@
     "flatpickr": "4.6.9",
     "jsvectormap": "1.3.3",
     "sass": "^1.62.1",
-    "simplebar": "5.3.6"
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^6.1.0",
+    "gulp-file-include": "^2.3.0",
+    "gulp-header-comment": "^0.10.0",
+    "gulp-rimraf": "^1.0.0",
+    "gulp-sass": "^5.1.0",
+    "gulp-sourcemaps": "^3.0.0",
+    "simplebar": "5.3.6",
+    "mysql2": "^3.3.1",
+    "browser-sync": "^2.27.10",
+    "express": "^4.18.2"
   },
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=assets",
