--- a/config/database.yml
+++ b/config/database.yml
@@ -6,11 +6,14 @@ default: &default
   database: event_list
   username: root
   password: shiiku419
-  host: 127.0.0.1
+  host: db 
+  socket: /tmp/mysql.sock
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   encoding: utf8
 
 development:
   <<: *default
+  database: admin_template_development
 #  database: db/development.sqlite3
 
 test:
