--- a/config/database.yml
+++ b/config/database.yml
@@ -3,13 +3,11 @@ default: &default
 #  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 #  timeout: 5000
   adapter: mysql2
-  database: event_list
   username: root
-  password: shiiku419
-  host: db 
-  socket: /tmp/mysql.sock
+  password: "shiiku419"
+  host: db
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  encoding: utf8
+  encoding: utf8mb4
 
 development:
   <<: *default
