--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "@popperjs/core": "^2.11.7",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.5",
+    "browser-sync": "^2.27.10",
     "chart.js": "2.9.4",
     "esbuild": "^0.17.19",
+    "express": "^4.18.2",
     "feather-icons": "4.28.0",
     "flatpickr": "4.6.9",
-    "jsvectormap": "1.3.3",
-    "sass": "^1.62.1",
+    "gatsby-plugin-fix-fouc": "^1.0.4",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^6.1.0",
     "gulp-file-include": "^2.3.0",
@@ -20,10 +21,10 @@
     "gulp-rimraf": "^1.0.0",
     "gulp-sass": "^5.1.0",
     "gulp-sourcemaps": "^3.0.0",
-    "simplebar": "5.3.6",
+    "jsvectormap": "1.3.3",
     "mysql2": "^3.3.1",
-    "browser-sync": "^2.27.10",
-    "express": "^4.18.2"
+    "sass": "^1.62.1",
+    "simplebar": "5.3.6"
   },
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=assets",
